--- a/apps/assets/css/apps.css
+++ b/apps/assets/css/apps.css
@@ -3,7 +3,8 @@ html, body{
 	margin: 0;
 	width: 100%;
 }
-a, p{
+
+h1, h2, h3, h4, h5, a, p{
 	font-family: 'Montserrat', sans-serif;
 }
 header{
@@ -66,4 +67,25 @@ mark{
 }
 .third{
 	padding: 0;
+}
+#product-list{
+	padding: 30px;
+}
+#product-list .container .col-md-3{
+	margin-bottom: 30px;
+}
+.btn-detail{
+	border: 2px solid #eec65d;
+	background: transparent;x
+}
+.btn-detail:hover{
+	background: #eec65d;
+	color: #000;
+}
+#feature{
+	background: #dfdfdf;
+	padding: 20px;
+}
+#feature p{
+	font-size: 12px;
 }
