--- a/apps/assets/css/apps.css
+++ b/apps/assets/css/apps.css
@@ -220,7 +220,10 @@ mark{
 	padding: 10px;
 	background: #fff;
 }
-
+.full .btn{
+	width: 100%;
+	display: block;
+}
 label{
 	font-family: 'Raleway';
 }
